# saas-sec-agents

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  NEXT_SESSION.md  NEXT_SESSION_PROMPTS.md  README.md  docker-compose.yml  mission.md  pyproject.toml  session_bootstrap.sh  setup.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: actions-security.yml  ci.yml  codeql.yml  dependency-review.yml  diagram.yml  pr-inline-review.yml  sbom.yml  security-checks.yml
agents/: orchestrator.md  repo-reviewer.md  reporter.md  security-reviewer.md  sfdc-expert.md  workday-expert.md
config/: role_model_policy.yaml  sscf_control_index.yaml
config/ccm/: ccm_v4.1_oscal_ref.yaml
config/component-definitions/: salesforce_component.json  workday_component.json
config/opensearch/: dashboards.ndjson  index-template-findings.json  index-template-runs.json
config/oscal-salesforce/: control_mapping.yaml  sbs_catalog.json  sbs_profile.json  sbs_to_sscf_mapping.yaml
config/saas_baseline_profiles/: salesforce_em_tsp_baseline_v1.yaml
config/salesforce/: sbs_v1_profile.json
config/sscf/: sscf_catalog.json  sscf_to_ccm_mapping.yaml  sscf_v1_catalog.json  sscf_v1_profile.json
config/workday/: workday_catalog.json  workday_to_sscf_mapping.yaml  wscc_v1_profile.json
contexts/: assess.md  research.md  review.md
docs/: CONTRIBUTING.md  architecture-blueprint.md
docs/oscal-salesforce-poc/: README.md  SESSION_HANDOFF_2026-02-24.md  WIKI_UPDATE_2026-02-24.md
harness/: __init__.py  agents.py  loop.py  memory.py  tools.py
prompts/: README.md
schemas/: baseline_assessment_schema.json
scripts/: check_licenses.py  export_to_opensearch.py  gen_diagram.py  generate_sbs_oscal_catalog.py  intake_questionnaire.py  intake_to_baseline.py  manual_controls_questionnaire.py  oscal_gap_map.py  oscal_import_sbs.py  run_assessment.py  validate_env.py  workday_dry_run_demo.py
tests/: test_harness_dry_run.py  test_pipeline_smoke.py  test_report_gen.py  test_sfdc_connect_jwt.py  test_workday_connect.py
(+45 files in other folders)
